[package]
name = "swrite"
version = "0.0.1"
edition = "2018"
description = "..." # TBD
documentation = "https://docs.rs/write/"
homepage = "https://github.com/rusticstuff/swrite"
repository = "https://github.com/rusticstuff/swrite"
keywords = [] # TBD
categories = [] # tBD
license = "MIT OR Apache-2.0"
exclude = [
    "/.gitignore",
    "/.github",
    "/.vscode",
]

[features]
osstring = []
